--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "vite": "^7.3.1"
-  }
+  },
+  "engines": {
+  "node": "20.x"
+}
 }
