--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^10.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "react-snowfall": "^2.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
